# cc_tools

./: .gitignore  Cargo.toml  README.md  archive_process.py  cc_tools-rs.md  domainExtract.go  download_watch.py  hash_dedup.py  main.py  nohup.out  path_get.py  printlu.py  pyrightconfig.json  record_refine.py  requirements.txt  sensitive_match.py  tool_funcs.py  warc_download.py
TextQualityScore-main/: ._LICENSE  ._bert.txt  ._requriements.txt  predict.py
TextQualityScore-main/utils/: data.py  encode.py
archive_process/: Cargo.toml  resource
archive_process/src/: main.rs
archive_process_warc/: 16-10-CC-NEWS-20161013144533-00024.parquet  Cargo.toml
archive_process_warc/src/: main.rs
cc_tools/: .gitignore  Cargo.toml
cc_tools/src/: main.rs
record_refine/: Cargo.toml
record_refine/src/: datamodel.rs  main.rs  trie.rs  utils.rs
resource/: large_domain.txt
resource/badwords/: en.txt  fra_Latn.txt  por_Latn.txt  zh.txt  zho_Hant.txt
resource/scripts/: download.sh  record_refine.sh  text_extract.sh
scored/: 0304.parquet
src/: main.rs
