[package]
name = "cc_tool"
version = "0.1.0"
edition = "2021"

[build]
RUSTFLAGS="-C target-cpu=native"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "49.0.0"
chardetng = "0.1.17"
clap = { version = "4.4.13", features = ["cargo"] }
encoding_rs = "0.8.33"
fasttext = "0.7.8"
futures = "0.3.30"
libc = "0.2.151"
parquet = { version = "49.0.0", features = ["tokio", "async"] }
rayon = "1.8.0"
regex = "1.10.2"
sys-info = "0.9.1"
tokio = { version = "1.35.1", features = ["fs", "rt-multi-thread", "sync"] }
url = "2.5.0"
utf8_slice = "1.0.0"
walkdir = "2.4.0"
warc = "0.3.2"
