[package]
name = "record_refine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "51.0.0"
clap = { version = "4.5.1", features = ["cargo"] }
fasttext = "0.7.8"
indicatif = { version = "0.17.7", features = ["rayon"] }
jieba-rs = "0.6.8"
once_cell = "1.19.0"
parquet = "51.0.0"
rand = "0.8.5"
rayon = "1.8.1"
regex = "1.10.3"
simhash = "0.2.0"
sys-info = "0.9.1"
utf8_slice = "1.0.0"
